@@ -7,12 +7,12 @@ Section Headers:
   \[ 0\]                   NULL             0000000000000000  00000000
        0000000000000000  0000000000000000           0     0     0
   \[ 1\] \.text             PROGBITS         0000000000000000  00000040
-       0000000000000018  0000000000000000  AX       0     0     4
-  \[ 2\] \.data             PROGBITS         0000000000000000  00000058
+       0000000000000016  0000000000000000  AX       0     0     4
+  \[ 2\] \.data             PROGBITS         0000000000000000  00000056
        0000000000000000  0000000000000000  WA       0     0     1
-  \[ 3\] \.bss              NOBITS           0000000000000000  00000058
+  \[ 3\] \.bss              NOBITS           0000000000000000  00000056
        0000000000000000  0000000000000000  WA       0     0     1
-  \[ 4\] \.shstrtab         STRTAB           0000000000000000  00000058
+  \[ 4\] \.shstrtab         STRTAB           0000000000000000  00000056
        000000000000002c  0000000000000000           0     0     1
   \[ 5\] \.symtab           SYMTAB           0000000000000000  00000248
        00000000000000c0  0000000000000018           6     7     8
@@ -38,4 +38,4 @@ Symbol table '\.symtab' contains 8 entries:
 
 Hex dump of section '\.text':
   0x00000000 fd2b2a29 73747269 6e670aff 8e007374 .*
-  0x00000010 72696e67 320a0000                   .*
+  0x00000010 72696e67 320a                       .*
