@@ -27,7 +27,7 @@ OFFSET           TYPE              VALUE
 0+ R_MMIX_64         \.text
 
 Contents of section \.text:
- 0000 00000000 00000021 232c0054 00000000  .*
+ 0000 00000000 00000021 232c0054           .*
 Contents of section \.data:
 Contents of section \.MMIX\.reg_contents:
  0000 00000000 00000000                    .*
